syntax = "proto3";

package user;

service AttendanceService {
  rpc PunchAttendanceDto (CreateUserDto) returns (UserResponse);
}

message CreateUserDto {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserDto {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message DeleteUserDto {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message Empty {}
